@@ -842,6 +842,10 @@ the Netscape web browser was released in February, 2008.
 This support has been obsolete since Emacs 25.1.  The final version of
 the Galeon web browser was released in September, 2008.
 
+** Ruby Mode
+
+*** New user option 'ruby-toggle-block-space-before-parameters'.
+
 ** Miscellaneous
 
 ---
